tests/NormalTests/paczka1/fuzzy1/96570687.err
Error in line 13: A812 S996 72,7
Error in line 21: RwCPMJgtDD A812 25,8
Error in line 24: RwCPMJgtDD A478 4,2
Error in line 36: gqub A812 78,4
